texi2html/test/invalid/res_all/texi_double_top_section/double_top_section.texi
\input texinfo @c -*-texinfo-*-
@settitle double_top_section.info

@top First top


First top.

@top Second top

Second top.


@bye
